// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radios nested dependant components passes through fieldset params without breaking 1`] = `

<span class="govuk-error-message">
  Please select an option
</span>

`;

exports[`Radios nested dependant components passes through fieldset params without breaking 2`] = `

<fieldset class="govuk-fieldset app-fieldset--custom-modifier"
          data-attribute="value"
          data-second-attribute="second-value"
>
  <legend class="govuk-fieldset__legend">
    Have you changed your name?
    <span class="govuk-fieldset__hint">
      This includes changing your last name or spelling your name differently.
    </span>
  </legend>
</fieldset>

`;

exports[`Radios nested dependant components passes through html fieldset params without breaking 1`] = `

<fieldset class="govuk-fieldset">
  <legend class="govuk-fieldset__legend">
    Have &lt;b&gt;you&lt;/b&gt; changed your name?
    <span class="govuk-fieldset__hint">
      This
      <b>
        includes
      </b>
      changing your last name or spelling your name differently.
    </span>
  </legend>
</fieldset>

`;

exports[`Radios nested dependant components passes through label params without breaking 1`] = `

<label class="govuk-label govuk-radios__label"
       data-attribute="value"
       data-second-attribute="second-value"
       for="example-name-1"
>
  <b>
    Yes
  </b>
</label>
<label class="govuk-label govuk-radios__label"
       for="example-name-2"
>
  &lt;b&gt;No&lt;/b&gt;
</label>

`;
